--- a/DwMember/zh-Hans.lproj/Localizable.strings
+++ b/DwMember/zh-Hans.lproj/Localizable.strings
@@ -70,3 +70,21 @@
 /* 未讀 */
 "unread" = "未读";
 
+/* 訂座狀態 */
+"status" = "订座状态";
+
+/* 卡號 */
+"CardNo" = "卡号";
+
+/* 預訂時間 */
+"Booking Time" = "预订时间";
+
+/* 預訂位數 */
+"Person" = "位数";
+
+/* 備註 */
+"Remark" = "备注";
+
+/* 預留食品 */
+"Reserved food" = "预留食品";
+
