--- a/DwMember/zh-Hant.lproj/Localizable.strings
+++ b/DwMember/zh-Hant.lproj/Localizable.strings
@@ -70,3 +70,21 @@
 /* 未讀 */
 "unread" = "未讀";
 
+/* 訂座狀態 */
+"status" = "訂座狀態";
+
+/* 卡號 */
+"CardNo" = "卡號";
+
+/* 預訂時間 */
+"Booking Time" = "預訂時間";
+
+/* 預訂位數 */
+"Person" = "位數";
+
+/* 備註 */
+"Remark" = "備註";
+
+/* 預留食品 */
+"Reserved food" = "預留食品";
+
