--- a/DwMember/zh-Hans.lproj/Localizable.strings
+++ b/DwMember/zh-Hans.lproj/Localizable.strings
@@ -1,4 +1,5 @@
-/* 地址 */
+/* 地址
+   店鋪地址 */
 "Address" = "店铺地址";
 
 /* 品牌 */
@@ -7,7 +8,7 @@
 /* 預訂時間 */
 "Booking Time" = "预订时间";
 
-/* 卡號 */
+/* 會員卡號 */
 "CardNo" = "会员卡号";
 
 /* 已確認 */
@@ -19,9 +20,6 @@
 /* 引導頁-頭部1 */
 "Fill in simple information" = "填写简单信息";
 
-/* 發現 */
-"Find" = "发现";
-
 /* 主頁 */
 "Home" = "主页";
 
@@ -30,12 +28,6 @@
 
 /* 引導頁-頭部3 */
 "Integral courtesy" = "积分礼遇";
-
-/* 密碼錯誤提示語 */
-"Login failed" = "登陆失败";
-
-/* 接口請求失敗提示語 */
-"Request failed please check the network" = "请求失败,请检查网络";
 
 /* 商城 */
 "Mall" = "商城";
@@ -49,7 +41,7 @@
 /* 引導頁-底部2 */
 "More offers" = "更多优惠";
 
-/* 位數 */
+/* 預訂位數 */
 "Person" = "预订位数";
 
 /* 叫號 */
@@ -58,16 +50,18 @@
 /* 引導頁-頭部2 */
 "Receive offers" = "接收优惠资讯";
 
-/* 備註 */
+/* 備註信息 */
 "Remark" = "信息备注";
 
 /* 預留食品 */
 "Reserved food" = "预留食品";
 
-/* 全稱 */
+/* 店鋪名稱
+   全稱 */
 "Shop Name" = "店铺名称";
 
-/* 電話 */
+/* 店鋪電話
+   電話 */
 "Tel No." = "店铺电话";
 
 /* 至 */
