--- a/DwMember/zh-Hant.lproj/Localizable.strings
+++ b/DwMember/zh-Hant.lproj/Localizable.strings
@@ -14,7 +14,7 @@
 "Confirmed" = "已確認";
 
 /* 已過期 */
-"Expired" = "已过期";
+"Expired" = "已過期";
 
 /* 引導頁-頭部1 */
 "Fill in simple information" = "填寫簡單信息";
