--- a/DwMember/zh-Hans.lproj/Main.strings
+++ b/DwMember/zh-Hans.lproj/Main.strings
@@ -2,7 +2,7 @@
 "DqC-Rb-ns4.text" = "扫描上方安全码进行积分";
 
 /* Class = "UIButton"; normalTitle = "use now!"; ObjectID = "GEu-SC-GRp"; */
-"GEu-SC-GRp.normalTitle" = "立即体验！";
+"GEu-SC-GRp.normalTitle" = "现在使用!";
 
 /* Class = "UINavigationController"; title = "homeNav"; ObjectID = "YLJ-9X-KbK"; */
 "YLJ-9X-KbK.title" = "homeNav";
@@ -20,8 +20,8 @@
 "mYl-j7-EQZ.text" = "  活动:";
 
 /* Class = "UITableViewController"; title = "Main"; ObjectID = "uko-IV-HjM"; */
-"uko-IV-HjM.title" = "Main";
+"uko-IV-HjM.title" = "主页";
 
 /* Class = "UINavigationItem"; title = "EPOT"; ObjectID = "xOO-vH-eYg"; */
-"xOO-vH-eYg.title" = "一鍋堂";
+"xOO-vH-eYg.title" = "EPOT";
 
