--- a/DwMember/zh-Hant.lproj/Main.strings
+++ b/DwMember/zh-Hant.lproj/Main.strings
@@ -23,5 +23,5 @@
 "uko-IV-HjM.title" = "一鍋堂";
 
 /* Class = "UINavigationItem"; title = "EPOT"; ObjectID = "xOO-vH-eYg"; */
-"xOO-vH-eYg.title" = "EPOT";
+"xOO-vH-eYg.title" = "一鍋堂";
 
