--- a/DwMember/zh-Hant.lproj/Main.strings
+++ b/DwMember/zh-Hant.lproj/Main.strings
@@ -1,8 +1,9 @@
-/* Class = "UILabel"; text = "Scan  the security code"; ObjectID = "DqC-Rb-ns4"; */
-"DqC-Rb-ns4.text" = "掃描上方安全碼進行積分";
+
+/* Class = "UILabel"; text = "掃描上方安全碼"; ObjectID = "DqC-Rb-ns4"; */
+"DqC-Rb-ns4.text" = "掃描上方安全碼";
 
 /* Class = "UIButton"; normalTitle = "use now!"; ObjectID = "GEu-SC-GRp"; */
-"GEu-SC-GRp.normalTitle" = "現在使用!";
+"GEu-SC-GRp.normalTitle" = "use now!";
 
 /* Class = "UINavigationController"; title = "homeNav"; ObjectID = "YLJ-9X-KbK"; */
 "YLJ-9X-KbK.title" = "homeNav";
@@ -13,15 +14,8 @@
 /* Class = "UILabel"; text = "60"; ObjectID = "glx-nq-rXE"; */
 "glx-nq-rXE.text" = "60";
 
-/* Class = "UIButton"; normalTitle = "+"; ObjectID = "m6M-Bc-X8G"; */
-"m6M-Bc-X8G.normalTitle" = "+";
-
-/* Class = "UILabel"; text = "  Activity:"; ObjectID = "mYl-j7-EQZ"; */
-"mYl-j7-EQZ.text" = "  活動:";
-
 /* Class = "UITableViewController"; title = "Main"; ObjectID = "uko-IV-HjM"; */
-"uko-IV-HjM.title" = "一鍋堂";
+"uko-IV-HjM.title" = "Main";
 
-/* Class = "UINavigationItem"; title = "EPOT"; ObjectID = "xOO-vH-eYg"; */
+/* Class = "UINavigationItem"; title = "一鍋堂"; ObjectID = "xOO-vH-eYg"; */
 "xOO-vH-eYg.title" = "一鍋堂";
-
