--- a/DwMember/zh-Hant.lproj/Find.strings
+++ b/DwMember/zh-Hant.lproj/Find.strings
@@ -1,3 +1,4 @@
+
 /* Class = "UILabel"; text = "Label"; ObjectID = "7hR-q4-UJx"; */
 "7hR-q4-UJx.text" = "Label";
 
@@ -7,9 +8,8 @@
 /* Class = "UILabel"; text = "Label"; ObjectID = "gK1-zA-jQY"; */
 "gK1-zA-jQY.text" = "Label";
 
-/* Class = "UINavigationItem"; title = "Find"; ObjectID = "rOY-kc-vdw"; */
+/* Class = "UINavigationItem"; title = "發現"; ObjectID = "rOY-kc-vdw"; */
 "rOY-kc-vdw.title" = "發現";
 
 /* Class = "UILabel"; text = "Label"; ObjectID = "zSE-Ly-QxW"; */
 "zSE-Ly-QxW.text" = "Label";
-
