--- a/DwMember/zh-Hant.lproj/Queue.strings
+++ b/DwMember/zh-Hant.lproj/Queue.strings
@@ -1,3 +1,3 @@
-/* Class = "UINavigationItem"; title = "Queue"; ObjectID = "Kdk-bB-7JI"; */
-"Kdk-bB-7JI.title" = "叫號";
 
+/* Class = "UINavigationItem"; title = "取票"; ObjectID = "Kdk-bB-7JI"; */
+"Kdk-bB-7JI.title" = "取票";
