--- a/DwMember/en.lproj/Find.strings
+++ b/DwMember/en.lproj/Find.strings
@@ -9,7 +9,7 @@
 "gK1-zA-jQY.text" = "Label";
 
 /* Class = "UINavigationItem"; title = "Find"; ObjectID = "rOY-kc-vdw"; */
-"rOY-kc-vdw.title" = "發現";
+"rOY-kc-vdw.title" = "店鋪位置";
 
 /* Class = "UILabel"; text = "Label"; ObjectID = "zSE-Ly-QxW"; */
 "zSE-Ly-QxW.text" = "Label";
