--- a/DwMember/en.lproj/Coupon.strings
+++ b/DwMember/en.lproj/Coupon.strings
@@ -30,4 +30,4 @@
 "tN7-fi-crC.text" = " ";
 
 /* Class = "UINavigationItem"; title = "Member Mall"; ObjectID = "tdm-Lz-V73"; */
-"tdm-Lz-V73.title" = "會員商城";
+"tdm-Lz-V73.title" = "會員禮遇";
