--- a/DwMember/zh-Hant.lproj/Coupon.strings
+++ b/DwMember/zh-Hant.lproj/Coupon.strings
@@ -33,4 +33,4 @@
 "tN7-fi-crC.text" = " ";
 
 /* Class = "UINavigationItem"; title = "會員商城"; ObjectID = "tdm-Lz-V73"; */
-"tdm-Lz-V73.title" = "會員商城";
+"tdm-Lz-V73.title" = "會員禮遇";
