--- a/DwMember/en.lproj/Main.strings
+++ b/DwMember/en.lproj/Main.strings
@@ -18,4 +18,4 @@
 "uko-IV-HjM.title" = "Main";
 
 /* Class = "UINavigationItem"; title = "EPOT"; ObjectID = "xOO-vH-eYg"; */
-"xOO-vH-eYg.title" = "一鍋堂";
+"xOO-vH-eYg.title" = "泰昌餅家";
