--- a/DwMember/zh-Hant.lproj/Main.strings
+++ b/DwMember/zh-Hant.lproj/Main.strings
@@ -18,4 +18,4 @@
 "uko-IV-HjM.title" = "Main";
 
 /* Class = "UINavigationItem"; title = "一鍋堂"; ObjectID = "xOO-vH-eYg"; */
-"xOO-vH-eYg.title" = "小火焰";
+"xOO-vH-eYg.title" = "築地日本料理";
